--- a/assets/css/shop-item.css
+++ b/assets/css/shop-item.css
@@ -3,7 +3,10 @@
   margin: 0;
   padding: 0;
 }
-
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
 #navBtnCart {
   display: none;
 }
@@ -17,7 +20,7 @@
   display: none;
 }
 body {
-  background: #f8f6f6;
+  background: #fff;
 }
 
 .avatar-name{
@@ -159,15 +162,15 @@ header #header .menu ul li a:hover
 /* footer */
 
 footer{
-<<<<<<< Updated upstream
+
   margin: calc(var(--gap)*5) 0 0 0;
   padding: 0 0 var(--gap);
   position: relative;
 }
 #foot .foot-logo{
     position: absolute;
-   /* fill: url(./img/rsz_logo.png);
-    background: url(./img/rsz_logo.png);*/
+   fill: url(./img/rsz_logo.png);
+    background: url(./img/rsz_logo.png);
     width: 300px;
     height: 130px;
     z-index: -1;
@@ -244,9 +247,7 @@ footer{
 #foot span:nth-child(2){
   color: #e58e26;
 }
-#foot .row h2{
-  
-}
+
 #foot .row ul{
   list-style: none;
 }
@@ -286,10 +287,10 @@ footer{
 }
 
 
-=======
-	margin: calc(var(--gap)*5) 0 0 0;
-    padding: 0 0 var(--gap);
-    position: relative;
+footer {
+  margin: calc(var(--gap) * 5) 0 0 0;
+  padding: 0 0 var(--gap);
+  position: relative;
 }
 #foot .foot-logo{
 	position: absolute;
@@ -371,9 +372,7 @@ footer{
 #foot span:nth-child(2){
 	color: #e58e26;
 }
-#foot .row h2{
-	
-}
+
 #foot .row ul{
 	list-style: none;
 }
@@ -386,7 +385,7 @@ footer{
 #foot .row a:hover{
 	color: #4056BF;
 }
->>>>>>> Stashed changes
+
 
 
 
@@ -402,12 +401,10 @@ footer{
 	
 }
 
-<<<<<<< Updated upstream
 /* Set gray background color and 100% height */
 .sidenav {
   background-color:rgba(0,0,0,.03);
   height: 100%;
-=======
 @media(max-width: 650px)
 {
 	#foot .row{
@@ -417,6 +414,6 @@ footer{
 	#foot .col{
 		padding-bottom: 20px;
 	}
->>>>>>> Stashed changes
-}
 
+}
+}
