--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -3,14 +3,22 @@
   margin: 0;
   padding: 0;
 }
-
+#logo{
+      margin-left: 0em;
+}
+#h4{
+      font-size: 20pt;
+    font-weight: 800;
+    color: #4c90e4;
+    text-shadow: 0 0 3px #6ad2ec;
+}
 img {
   max-width: 100%;
   max-height: 100%;
 }
 .img-circle {
-  height: 65px;
-  width: 65px;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
   vertical-align: middle;
   border: 0;
