--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -83,16 +83,90 @@ header .carousel {
   background: #fdf2ff;
   padding: 3rem 0;
 }
+#flashSale h1{
+  animation: bh1 2s infinite;
+
+}
+@keyframes bh1{
+  0% {
+    color: rgb(247, 15, 15);
+    -ms-transform: skewY(-10deg); /* IE 9 */
+    transform: skewY(-10deg); }
+  50%  {
+    color:#e77c5c;
+    -ms-transform: skewY(10deg); /* IE 9 */
+    transform: skewY(10deg); }
+  100% {
+    color: rgb(241, 8, 8);
+    -ms-transform: skewY(-10deg); /* IE 9 */
+    transform: skewY(-10deg); }
+}
 .flash-sale-white-bg {
   align-items: center;
+ 
+
 }
-.flash-sale-time {
-  display: flex;
-  border: 1px solid #fff;
-  background: #fff;
+
+#dong_ho h2{
+  position: relative;
+  display:block;
+  color:rgb(238, 120, 120);
   text-align: center;
-  padding: 0.5rem;
+  margin:10px 0;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
 }
+#dong_ho #thoi_gian{
+  display:flex;
+  margin: 0 7rem;
+}
+#dong_ho #thoi_gian div{
+  position: relative;
+  margin: 0 5px;
+}
+#dong_ho #thoi_gian div span{
+  position: relative;
+  display:block;
+  width:100px;
+  height: 80px;
+  background: #0f96fd;
+  color: #fff;
+  font-weight: 300;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  z-index:3;
+  box-shadow: 0 0 0 1px rgba(0,0,0,0.2);
+}
+#dong_ho #thoi_gian span:nth-child(2){
+  height: 50px;
+  width: 100px;
+  font-size: 1rem;
+  letter-spacing: 0.3rem;
+  z-index: 2;
+  box-shadow: none;
+  background:#0f96fd;
+  text-transform: uppercase;
+}
+#dong_ho #thoi_gian div:last-child span {
+  background: #ff006a;
+}
+#dong_ho #thoi_gian div:last-child span:nth-child(2) {
+  background: #ec0062;
+}
+#dong_ho #thoi_gian div{
+  position: relative;
+  margin: 0 5px;
+  -webkit-box-reflect: below 10px linear-gradient(transparent, #0004);
+}
+
+.temp{
+  padding-bottom: 12rem;
+  padding-top: 3rem;
+}
+
 .flash-sale-time .time {
   margin: 0 auto;
   display: flex;
@@ -110,6 +184,7 @@ header .carousel {
 .flash-sale-logo {
   padding-left: 3rem;
   text-align: center;
+  padding-bottom: 1rem;
 }
 
 .flash-sale-product .swiper-contain {
